# hisoka

./: .gitignore  CHANGELOG.md  Makefile  README.MD  dune-project  hisoka.opam
lib/cbindings/: cbindings.ml  clangd_config.rb  dune
lib/cbindings/config/: discover.ml  dune
lib/cbindings/display/: curses.c  display.c  display.h  termove.c  termove.h  test.c
lib/cbindings/input/: input.c
lib/commandline/: cadd.ml  cdecrypt.ml  cdelete.ml  cinit.ml  clist.ml  commandline.ml  common.ml  dune
lib/hisoka/: Input.ml  app.ml  cli.ml  dune  encryption.ml  error.ml  hisoka.ml  items.ml  manager.ml  pass.ml  util.ml
lib/libhisoka/: Input.ml  app.ml  cli.ml  commit.ml  config.ml  dune  encryption.ml  error.ml  info.ml  item.ml  items.ml  libhisoka.ml  manager.ml  managers.ml  pathBuf.ml  util.ml
lib/util/: dune  fileSys.ml  format.ml  hash.ml  io.ml  path.ml  strategy.ml  util.ml
man/: dune
test/: dune
