;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Hisoka                                                                *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Hisoka is free software: you can redistribute it and/or modify it under the terms          *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Hisoka is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;        *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Hisoka.       *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(rule
 (with-stdout-to
  hisoka.1
  (run %{bin:hisoka} --help=groff)))

(install
 (section man)
 (files hisoka.1))

(rule
 (with-stdout-to
  hisoka-add.1
  (run %{bin:hisoka} add --help=groff)))

(install
 (section man)
 (files hisoka-add.1))

(rule
 (with-stdout-to
  hisoka-decrypt.1
  (run %{bin:hisoka} decrypt --help=groff)))

(install
 (section man)
 (files hisoka-decrypt.1))

(rule
 (with-stdout-to
  hisoka-delete.1
  (run %{bin:hisoka} delete --help=groff)))

(install
 (section man)
 (files hisoka-delete.1))

(rule
 (with-stdout-to
  hisoka-display.1
  (run %{bin:hisoka} display --help=groff)))

(install
 (section man)
 (files hisoka-display.1))

(rule
 (with-stdout-to
  hisoka-init.1
  (run %{bin:hisoka} init --help=groff)))

(install
 (section man)
 (files hisoka-init.1))

(rule
 (with-stdout-to
  hisoka-list.1
  (run %{bin:hisoka} list --help=groff)))

(install
 (section man)
 (files hisoka-list.1))
