;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Hisoka                                                                *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Hisoka is free software: you can redistribute it and/or modify it under the terms          *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Hisoka is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;        *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Hisoka.       *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs unqualified)

(library
 (name cbindings)
  (foreign_stubs (language c) (names input display)
    (flags 
      (:include cflags_chafa.sexp) 
      (:include cflags_MagickWand.sexp)
      (-fPIC)
    )
  )
  (c_library_flags 
    (:include clibrary_flags_chafa.sexp)
    (:include clibrary_flags_MagickWand.sexp)
  )
)


(rule
  (targets cflags_chafa.sexp clibrary_flags_chafa.sexp cflags_MagickWand.sexp clibrary_flags_MagickWand.sexp)
  (action  (run ./config/discover.exe))
)

; (library
;  (name            mylib)
;  (public_name     mylib)
;  (libraries       re lwt)
;  (foreign_stubs
;   (language c)
;   (names mystubs)
;   (flags (:include c_flags.sexp)))
;  (c_library_flags (:include c_library_flags.sexp)))

; (rule
;  (targets c_flags.sexp c_library_flags.sexp)
;  (action  (run ./config/discover.exe)))